lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:2: error: '=' expected but ';' found.
 var zone=Segment
^