lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.code
 var Segment:= Array[Point](2)
 var zone=Segment
 
  
  override def initialize() {
  
	
  	while (getY>=zone(0).y){
  		step
  	}

  }

  override def step() {

	if(Position == 1){
		setAngleDesire(0)
		if(getVitesseY()<=(-10)){
			setPousseeDesiree(4)
		}
		else{
			setPousseeDesiree(0)
		}
	}
	else if(Position == 0){
		setAngleDesire(-30)
		setPousseeDesiree(4)
		
	}
	else {
		setAngleDesire(30)
		setPousseeDesiree(4)
		
	}
  
  }

def getLandingZone(){

var sol=getSol()
var pos:Double= 0
var premier = Point(0,0)
var deuxieme = Point(0,0)

	for(i<-0 to getSol.length-2){
		premier = sol(i)
		deuxieme = sol(i+1)
		if(premier.y==deuxieme.y){
			Segment(0)=premier
			Segment(1)=deuxieme
		}
	}
}

def Position:Int={
	if(getX<zone(0).x){
		return 0
	}
	else if((getX>=zone(0).x)&&(getX<=zone(1).x)){
		return 1
	}
	else{
		return 2
	}
}
